# TouchTerrain_for_CAGEO

./: .gitignore  .pre-commit-config.yaml  Coordinate_system_conv.py  DEVELOPMENT.md  Dockerfile.ci-test  EarthEngine_authentication_guide.md  IL_agg.tif  IND_agg.tif  LICENSE  Makefile  NEWS  NEWS.md  ReadMe.md  Run_TouchTerrain_debug_server_app.py  TouchTerrain-app.py  TouchTerrain.wsgi  TouchTerrainEarthEngine.py  TouchTerrain_app.py  TouchTerrain_jupyter_for_starters.html  TouchTerrain_jupyter_for_starters.ipynb  TouchTerrain_jupyter_starters_binder.ipynb  TouchTerrain_jupyter_starters_colab.ipynb  TouchTerrain_server_app.py  TouchTerrain_standalone.py  TouchTerrain_standalone_jupyter_notebook-GPX-test.ipynb  TouchTerrain_standalone_jupyter_notebook.html  TouchTerrain_standalone_jupyter_notebook.ipynb  TouchTerrain_standalone_jupyter_notebook_geemap.ipynb  app.py  app.yaml  chris_dev_notes.txt  config.py  conftest.py  environment-base.yml  environment-dev.yml  environment.yml  grid_tesselate.py  index.html  merging_plan.md  postBuild  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
common/: Coordinate_system_conv.py  InMemoryZip.py  TouchTerrainEarthEngine.py  grid_tesselate.py  polygon_example.kml  touchterrain_config.py
docs/: readme.txt
old/: setup.py
refactoring_docs/: Analysis.md  Planning.md  README.md
server/: GoogleMapsKey.txt  TouchTerrain_app.py  app.yaml  config.py  gunicorn_settings.py  index.html  privatekey.pem  server_setup_script_example_ansible.yml  touchterrain.wsgi  touchterrain_config.py
server/css/: iastate.min.css
server/docs/: readme.txt
server/static/js/: parser.min.js  readme.txt  stl_viewer.min.js
server/templates/: index.html
server/tmp/: NED_-108.12_44.60_log.txt
standalone/: TouchTerrain_standalone.py  TouchTerrain_standalone_jupyter_notebook.ipynb  TouchTerrain_standalone_jupyter_notebook_web_view.html  example_config.json
stuff/: TouchTerrain_standalone_jupyter_notebook.html  example_config.json  geotiff_example.tif  polygon_example.kml  pyramid.tif
stuff/gpx-test/: CinTwistToFrog.gpx  DLRT.gpx  DLRTnML.gpx  DonnerToFrog.gpx  DrifterToAndesite.gpx  DrifterToAndestiteV2.gpx  DrifterToHoleInTheGround.gpx  SodaSpringsToDrifter.gpx  SolvangToFrog.gpx  alder-creek-to-crabtree-canyon.gpx  dd-to-prosser.gpx  example_path.gpx  sagehen.gpx  tomstrail.gpx  ugly-pop-without-solvang.gpx
terrain2/: NED_-108.12_44.60.tif
terrain_braille/: NED_-108.12_44.60.tif  logfile.txt
test/: SheepMtn.tif  TouchTerrain_test_matrix.csv  sheepMtn_outline.kml  test_TouchTerrainGPX.py  test_TouchTerrain_standalone.py  test_grid_tesselate.py  test_nudge_corner.py  test_polygon_clipping.py
test_get_zipped_tiles_gpx/: NED_-120.29_39.39.tif  logfile.txt
tmp/: NED_-108.12_44.59_log.txt
touchterrain/common/: BorderEdge.py  Coordinate_system_conv.py  Quad.py  RasterVariants.py  TouchTerrainEarthEngine.py  TouchTerrainGPX.py  Vertex.py  calculate_ticks.py  config.py  grid_tesselate.py  interpolate_Z.py  nudge_corner.py  polygon_clipping.py  polygon_test.py  shapely_plot.py  shapely_polygon_utils.py  shapely_utils.py  tile_info.py  user_config.py  utils.py  vectors.py
touchterrain/docs/: CHANGES_from_google_maps.txt  how_rate_limiting_works.txt
touchterrain/server/: Run_TouchTerrain_debug_server_app.py  TouchTerrain_app.py  TouchTerrain_app_bootstrap.py  config.py  gunicorn_settings.py  offline_render.py
touchterrain/server/DEM_outlines/: AU_GA_AUSTRALIA_5M_DEM.geojson  IGN_RGE_ALTI_1M_2_0_FXX.geojson  UK_EA_ENGLAND_1M_TERRAIN_2022.geojson  USGS_3DEP_1m.geojson
touchterrain/server/static/css/: L.Control.MousePosition.css  base.css  iastate.legacy.css  iastate.legacy.min.css  iastate.min.css  touchterrain_leaflet.css
touchterrain/server/static/js/: CanvasRenderer.js  L.Control.MousePosition.js  OrbitControls.js  Projector.js  iastate.js  load_stl.min.js  parser.min.js  readme.txt  touchterrain.js  webgl_detector.js
touchterrain/server/templates/: index.html  index_bootstrap.html  index_bootstrap_orig.html  index_old.html  intro.html  macros.html  popover_test.html  preview.html  touchterrain.js
touchterrain/server_google_maps/: TouchTerrain_app.py  config.py
touchterrain/server_google_maps/static/css/: iastate.css
touchterrain/server_google_maps/templates/: index.html  touchterrain.js
