[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "touchterrain"
version = "3.7.0"
description = "Framework for converting raster based Digital Elevation Models (online or local) into 3D printable terrain models (STL)"
readme = "ReadMe.md"
requires-python = ">=3.11,<4"
license = { text = "GPLv3" }
authors = [
    { name = "Chris Harding", email = "charding@iastate.edu" },
]
keywords = ["elevation", "terrain", "3D-printing", "geotiff", "STL"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "defusedxml>=0.6",
    "earthengine-api>=0.1.232",
    "geojson>=2.5",
    "geopandas",
#   "gdal>=3.2.1,<3.10", # Commented out because pip may have issues compiling using VS build tools. It is better to install gdal via "conda install -c conda-forge gdal"
    "google-api-python-client>=2.6",
    "httplib2>=0.22.0",
    "imageio>=2.36.0",
    "k3d>=2.16.1",
    "kml2geojson>=4.0.2",
    "matplotlib>=3.9.2",
    "numpy>=1.17",
    "oauth2client>=4.1.3",
    "Pillow>=6.0.0",
    "requests>=2.0.0",
    "scipy>=1.2",
    "shapely>=2.1.0",
    "six>=1.15.0",
]

[project.optional-dependencies]
server = [
    "Flask>=2.0.0",
    "gunicorn>=20.0.4",
]
notebook = [
    "cartopy",
    "datapane",
    "flask-caching",
    "geemap>=0.11.0",
    "ipykernel",
    "ipyvtklink",
    "ipywidgets",
    "jupyterlab",
    "keplergl",
    "laspy",
    "leafmap>=0.7.2",
    "localtileserver>=0.4.0",
    "notebook",
    "osmnx",
    "pydeck",
    "pyntcloud",
    "pyvista",
    "rio-cogeo",
    "tifffile",
    "xarray_leaflet",
]

[project.urls]
Homepage = "https://github.com/ChHarding/TouchTerrain_for_CAGEO"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["touchterrain", "touchterrain.*"]
